<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_appearance"
        app:iconSpaceReserved="false">

        <net.asksakis.massdroid.ColorPickerPreference
            android:key="color_accent"
            android:title="@string/settings_color_accent_title"
            android:defaultValue="purple"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_general"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:defaultValue="@string/settings_url_default"
            android:key="pwa_url"
            android:summary="@string/settings_url_summary"
            android:title="@string/settings_url_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="keep_screen_on"
            android:summary="@string/settings_keep_screen_on_summary"
            android:title="@string/settings_keep_screen_on_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="auto_play_bluetooth"
            android:summary="@string/settings_auto_play_bluetooth_summary"
            android:title="@string/settings_auto_play_bluetooth_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="auto_resume_network"
            android:summary="@string/settings_auto_resume_network_summary"
            android:title="@string/settings_auto_resume_network_title"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:key="page_zoom"
            android:title="@string/settings_zoom_title"
            android:defaultValue="100"
            android:max="150"
            app:min="50"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_advanced"
        app:iconSpaceReserved="false">

        <Preference
            android:key="clear_certificate"
            android:title="@string/settings_clear_certificate"
            android:summary="@string/settings_clear_certificate_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_about"
        app:iconSpaceReserved="false">

        <Preference
            android:key="app_version"
            android:title="@string/settings_app_version"
            android:summary=""
            android:enabled="false"
            android:selectable="false"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="check_updates"
            android:title="@string/settings_check_updates"
            android:summary="@string/settings_check_updates_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
